# WattMail

./: .gitignore  BUGSWEEP.md  CONTEXT.md  Cargo.toml  PLAN.md  PROJECT_CONTEXT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
apps/auth-spike/: Cargo.toml
apps/auth-spike/src/: main.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: crypto.rs  html.rs  lib.rs  provider.rs
crates/infrastructure/src/auth/: mod.rs  pkce.rs  token_store.rs
crates/infrastructure/src/gmail/: mod.rs
crates/infrastructure/src/graph/: calendar.rs  mod.rs
crates/infrastructure/src/icloud/: calendar.rs  civil.rs  dav.rs  emit.rs  ical.rs  mod.rs  rrule.rs
crates/infrastructure/src/store/: mod.rs
scripts/: verify.sh
src/: calendar.ts  dialog.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  commands.rs  lib.rs  main.rs  paths.rs  settings.rs
