[package]
name = "wattmail-desktop"
version = "0.2.6"
description = "WattMail desktop client"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "wattmail_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
dirs = "6"
wattmail-domain = { workspace = true }
wattmail-application = { workspace = true }
wattmail-infrastructure = { workspace = true }
